# Aesthesis

./: .env.example  .gitignore  ASSUMPTIONS.md  ASSUMPTIONS_AGENT_PROMPT.md  ASSUMPTIONS_BRAIN.md  ASSUMPTIONS_PHASE2_CAPTURE.md  CHANGELOG.md  DESIGN.md  README.md  TODOS.md  conftest.py  dev.cmd  dev.sh  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements-tribe.txt
aesthesis-app/: package-lock.json  package.json
aesthesis-app/app/: globals.css  layout.tsx  page.tsx
aesthesis-app/app/api/auth/[auth0]/: route.ts
aesthesis-app/app/api/runs/: route.ts
aesthesis-app/app/api/runs/[id]/summary/: route.ts
aesthesis-app/components/: AgentPanel.tsx  AnalyzingView.tsx  AssessView.tsx  AuthButton.tsx  Brain3D.tsx  BrainChart.tsx  BrainCortical.tsx  BrainHero.tsx  BrainLoadingAnimation.tsx  CaptureView.tsx  ComparePanel.tsx  HistoryPanel.tsx  InsightCard.tsx  Landing.tsx  LiveStreamPanel.tsx  OverallAssessmentPanel.tsx  ResultsView.tsx  UploadZone.tsx  VerdictPanel.tsx  VideoPlayer.tsx  VideoPlayerSynced.tsx
aesthesis-app/lib/: adapt.ts  api.ts  backboard.ts  brainSynthetic.ts  demoResults.ts  mockData.ts  types.ts
aesthesis-app/lib/db/: runs.ts
aesthesis-app/public/brain/: fsaverage5-left-inflated.glb  fsaverage5-left-pial.glb  fsaverage5-right-inflated.glb
aesthesis_app/: modal_app.py  pyproject.toml
aesthesis_app/aesthesis/: __init__.py  annotate.py  browser_agent.py  config.py  events.py  main.py  orchestrator.py  output_builder.py  prompt_renderer.py  prompts.py  schemas.py  screenshots.py  synthesizer.py  tribe_client.py  validation.py
aesthesis_app/aesthesis/capture/: __init__.py  protocol.py  runner.py  streamer.py
aesthesis_app/scripts/: spike_d21_browseruse_cdp_coexistence.py
aesthesis_app/tests/: conftest.py  test_browser_agent_kill.py  test_capture_endpoints.py  test_orchestrator_actions.py  test_prewarm.py  test_streamer.py
aethesis-app/: UIUX.md  proxy.ts
aethesis-app/app/: layout.tsx
aethesis-app/app/api/runs/[id]/: route.ts
aethesis-app/app/api/runs/[id]/compare/: route.ts
aethesis-app/components/: AuthButton.tsx  Brain3D.tsx  BrainCortical.tsx  ResultsView.tsx  VideoPlayer.tsx
aethesis-app/lib/: colormap.ts
aethesis-app/prisma/migrations/20260425222704_add_backboard_persistence/: migration.sql
backend/aesthesis/: logging_config.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/agent/: route.ts
frontend/app/api/agent/insight-fix/: route.ts
frontend/components/: AgentPanel.tsx  AnalyzingView.tsx  Brain3D.tsx  BrainChart.tsx  BrainLoadingAnimation.tsx  ComparePanel.tsx  HistoryPanel.tsx  InsightCard.tsx  Landing.tsx  Providers.tsx  ResultsView.tsx  VideoPlayer.tsx
frontend/lib/: adapt.ts  auth0.ts  prisma.ts  types.ts
frontend/lib/db/: runs.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20260425155621_init/: migration.sql
frontend/public/brain/: fsaverage5-right-pial.glb
tests/: test_app_annotate.py  test_app_events.py  test_app_metrics.py  test_app_orchestrator_screenshots.py  test_app_output_builder.py  test_app_prompt_renderer.py  test_app_screenshots.py  test_app_validation.py  test_integration_smoke.py  test_step2b_parcels.py  test_tribe_composites.py  test_tribe_extract_roi.py  test_tribe_timeline.py
tribe_service/: Dockerfile  modal_app.py  pyproject.toml
tribe_service/scripts/: bake_brain_glbs.py  bake_parcel_map.py  generate_weights.py  project_signatures.py
tribe_service/tribe_neural/: __init__.py  api.py  constants.py  init_resources.py  logging_config.py  pipeline.py  tribe_runner.py  validation.py  worker.py
tribe_service/tribe_neural/steps/: __init__.py  step2_roi.py  step2b_parcels.py  step2c_face_colors.py  step3_stats.py  step4_connectivity.py  step5_composites.py  step7_timeline.py
