[project]
name = "aesthesis"
version = "0.1.0.0"
description = "Brain-judged A/B comparison via TRIBE v2 — backend (Step 2: Assess)"
requires-python = ">=3.10"
authors = [{ name = "William" }]
readme = "README.md"

# Top-level pyproject is intentionally a workspace stub. The two services
# (tribe_service and aesthesis_app) each have their own pyproject.toml with
# concrete dependency sets — TRIBE pulls in torch + tribev2 + nilearn + arq;
# aesthesis_app pulls in fastapi + ffmpeg-python + google-generativeai.
#
# Shared dev tooling lives here so a single `pip install -e ".[dev]"` from the
# repo root sets up tests against both packages.
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
markers = [
    "integration: end-to-end smoke tests using mock TRIBE / mock Gemini",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s :: %(message)s"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["tribe_service", "aesthesis_app"]
include = ["tribe_neural*", "aesthesis*"]
